content/v4/mqtt-outbound.md
title = "MQTT Messaging"
template = "main"
date = "2023-11-04T00:00:01Z"
enable_shortcodes = true
[extra]
url = "https://github.com/spinframework/spin-docs/blob/main/content/v4/mqtt-outbound.md"

---
- [Sending MQTT Messages From Applications](#sending-mqtt-messages-from-applications)
- [Granting Network Permissions to Components](#granting-network-permissions-to-components)
  - [Configuration-Based Permissions](#configuration-based-permissions)
- [Known Issues](#known-issues)

Spin provides an experimental interface for you to send messages using the MQTT protocol.

{{ details "Why do I need a Spin interface? Why can't I just use my language's MQTT library?" "Few MQTT libraries have been updated to work over the WASI 0.2 sockets interface. The Spin interface means Wasm modules can bypass this limitation by asking Spin to make the MQTT connection on their behalf." }}

> Want to receive MQTT messages?  Use [the MQTT trigger](https://github.com/spinkube/spin-trigger-mqtt) to handle messages in your Spin application.

## Sending MQTT Messages From Applications

The Spin SDK surfaces the Spin MQTT interface to your language. The set of operations defined in Spin's API is as follows:

| Operation    | Parameters          | Returns | Behavior |
|--------------|---------------------|---------|----------|
| `open`       | address, username, password, keep-alive | connection resource | Opens a connection to the specified MQTT server. The host must be listed in `allowed_outbound_hosts`. Other operations must be called through a connection. |
| `publish`    | topic, payload, QoS | -       | Publishes the payload (a binary blob) as a message to the specified topic. |

The exact detail of calling these operations from your application depends on your language:

{{ tabs "sdk-type" }}

{{ startTab "Rust"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://docs.rs/spin-sdk/latest/spin_sdk/mqtt/index.html)

MQTT functions are available in the `spin_sdk::mqtt` module.

To access an MQTT server, use the `Connection::open` function.

```rust
let connection = spin_sdk::mqtt::Connection::open(&address, &username, &password, keep_alive_secs).await?;
```

You can then call the `Connection::publish` function to send MQTT messages:

```rust
let cat_picture: Vec<u8> = request.body().to_vec();
connection.publish("pets", &cat_picture, spin_sdk::mqtt::Qos::AtLeastOnce).await?;
```

For full details of the MQTT API, see the [Spin SDK reference documentation](https://docs.rs/spin-sdk/latest/spin_sdk/mqtt/index.html);

You can find a complete Rust code example for using outbound MQTT from an HTTP component in the [Spin Rust SDK repository on GitHub](https://github.com/spinframework/spin-rust-sdk/tree/main/examples/mqtt-outbound).

{{ blockEnd }}

{{ startTab "TypeScript"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://spinframework.github.io/spin-js-sdk/modules/_spinframework_spin-mqtt.html)

To access an MQTT server, use the `open` function.

```ts
import { open, QoS } from "@spinframework/spin-mqtt";

let connection = Mqtt.open(address, username, password, keepAliveSecs);
```

You can then call the `publish` method on the connection to send MQTT messages:

```ts
let catPicture = new Uint8Array(await req.arraybuffer());
connection.publish("pets", catPicture, QoS.AtleastOnce);
```

For full details of the MQTT API, see the [Spin SDK reference documentation](https://spinframework.github.io/spin-js-sdk/modules/_spinframework_spin-mqtt.html)

You can find a complete Rust code example for using outbound MQTT from an HTTP component in the [Spin Rust SDK repository on GitHub](https://github.com/spinframework/spin-js-sdk/tree/main/examples/spin-host-apis/spin-mqtt).

{{ blockEnd }}

{{ startTab "Python"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://spinframework.github.io/spin-python-sdk/v4/mqtt.html)

To access an MQTT server, use the `open` function. You can then call the `publish` method on the connection to send MQTT messages:

```python
from spin_sdk import http, mqtt 
from spin_sdk.mqtt import Qos
from spin_sdk.http import Request, Response

class HttpHandler(http.Handler):
  async def handle_request(self, request: Request) -> Response:
        with await mqtt.open("mqtt://localhost:1883?client_id=client001", "user", "password", 30) as conn:
            await conn.publish("telemetry", bytes("Eureka!", "utf-8"), Qos.AT_LEAST_ONCE)
```

For full details of the MQTT API, see the [Spin SDK reference documentation](https://spinframework.github.io/spin-python-sdk/v4/mqtt.html)

You can find a complete Python code example for using outbound MQTT from an HTTP component in the [Spin Python SDK repository on GitHub](https://github.com/spinframework/spin-python-sdk/tree/main/examples/spin-outbound-mqtt).

{{ blockEnd }}

{{ startTab "Go"}}

> [**Want to go straight to the Spin SDK reference documentation?**  Find it here.](https://pkg.go.dev/github.com/spinframework/spin-go-sdk/v3/mqtt)

To access an MQTT server, use the `mqtt` package. Open a connection using the `OpenConnection` function, then call the `Publish` method:

```go
import (
	"github.com/spinframework/spin-go-sdk/v3/mqtt"
)

func testMqtt(address, user, pw string, keepAlive uint64) error {
  conn, err := mqtt.OpenConnection(address, user, pw, keepAlive)
  if err != nil {
    return err
  }

  message := []byte("Eureka!")

  if err := conn.Publish("tests", message, mqtt.QosAtMostOnce); err != nil {
    return err
  }
}
```

{{ blockEnd }}

{{ blockEnd }}

## Granting Network Permissions to Components

By default, Spin components are not allowed to make outgoing network requests, including MQTT. This follows the general Wasm rule that modules must be explicitly granted capabilities, which is important to sandboxing. To grant a component permission to make network requests to a particular host, use the `allowed_outbound_hosts` field in the component manifest, specifying the host and allowed port:

```toml
[component.uses-mqtt]
allowed_outbound_hosts = ["mqtt://messaging.example.com:1883"]
```

### Configuration-Based Permissions

You can use [application variables](./variables.md#adding-variables-to-your-applications) in the `allowed_outbound_hosts` field.

## Known Issues

The MQTT API is experimental and subject to change.  The following issues are known:

* The MQTT sender interface in the current version of Spin is known to occasionally drop errors, especially if under load. A fix is in progress.
